# bimg

./: .gitignore  CMakeLists.txt
cmake/: bimgConfig.cmake.in
cmake/Hunter/: config.cmake
